Fix label z-index on Safari

--- a/src/assets/scss/global/select.scss
+++ b/src/assets/scss/global/select.scss
@@ -53,6 +53,7 @@
 		width: 100%;
 		background: $white;
 		visibility: hidden;
+		z-index: 1000;
 	}
 
 	.cs-select.cs-active .cs-options {
